--- a/gestion/templates/gestion/email/password_reset_email.html
+++ b/gestion/templates/gestion/email/password_reset_email.html
@@ -3,3 +3,14 @@
 <head>
     <title>Réinitialisation de votre mot de passe</title>
 </head>
+<body>
+    <h1>Réinitialisation de votre mot de passe</h1>
+    <p>Bonjour {{ user.username }},</p>
+    <p>Nous avons reçu une demande de réinitialisation de votre mot de passe. Cliquez sur le lien ci-dessous pour réinitialiser votre mot de passe :</p>
+    <p><a href="{{ url }}">Réinitialiser mon mot de passe</a></p>
+    <p>Si vous n'avez pas demandé cette réinitialisation, vous pouvez ignorer cet e-mail.</p>
+    <p>Merci,</p>
+    <p>L'équipe de RentSolution</p>
+</body>
+</html>
+
